--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/hassan19071/Recipe_app",
+  "homepage": "https://hassan19071.github.io/Recipe_app",
   "name": "recipe",
   "version": "0.1.0",
   "private": true,
